--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -101,6 +101,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Fontes\u_funcoes.pas"/>
+        <DCCReference Include="Fontes\u_pessoas.pas">
+            <Form>form_pessoas</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
