Tela de consulta

--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -105,6 +105,10 @@
             <Form>form_pessoas</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Fontes\u_consulta.pas">
+            <Form>form_consulta</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
