--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -109,6 +109,10 @@
             <Form>form_consulta</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Fontes\u_pessoas_campos.pas">
+            <Form>form_pessoas_campos</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
