--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -113,6 +113,11 @@
             <Form>form_pessoas_campos</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Fontes\u_dados.pas">
+            <Form>form_dados</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
