--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -118,6 +118,14 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="Fontes\u_msg_confirm.pas">
+            <Form>form_msn_confirm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Fontes\u_esmaecer.pas">
+            <Form>form_esmaiecer_fundo</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
