--- a/LayOut.dproj
+++ b/LayOut.dproj
@@ -130,6 +130,10 @@
             <Form>form_login</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Fontes\u_mensagem_padrao.pas">
+            <Form>frm_mensagens_padrao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
